feat: add new column to paymentDto; update swagger
